src/Components/GameCard/gamecard.less
@import '../../variables.less';

@title-width: 0 0 calc(100% - 200px);

.game-card {
  width: 95%;
  padding: 10px;

  .image-and-description {
    display: flex;
    flex-flow: row wrap;
    width: 100%;

    .game-cover {
      .game-cover-image {
        width: 200px;
        height: auto;
        border-radius: 10px;
      }
    }

    .game-info {
      width: calc(100% - 264px);
      padding: 0 24px;
      .game-title {
        text-decoration: none;
        color: @black;
        .title-header {
          font-weight: bold;
          margin-right: 30px;
          margin-top: 0;
          margin-bottom: 16px;
        }

        .game-title-hr {
          width: calc(100% - 40px);
          border: initial;
          border-style: solid;
          border-color: @light-gray;
          border-width: 1px;
          color: @light-gray;
          margin-right: 10px;
          margin-bottom: 20px;
          margin-left: 0;
        }
      }

      .star-rating {
        justify-content: left;
      }

      .game-description {
        font-weight: bold;
        font-size: 16px;
        color: @gray;
        overflow: hidden;
        /* multiline ellipsis code taken from:
        http://hackingui.com/front-end/a-pure-css-solution-for-multiline-text-truncation/?fbclid=IwAR0QLS4Wb22gibkA6TO5lbY2qRh2GS0k80UfCpePsWkSKEUzLe0OiMpnAWU */
        position: relative; 
        line-height: 25px;
        max-height: 100px; 
        text-align: justify;  
        /* place for '...' */
        margin-right: -30px;
        padding-right: 30px;
        padding-top: 15px;

        .description-text {
          margin-top: 0;
        }

        &:before {
          /* points in the end */
          content: '...';
          /* absolute position */
          position: absolute;
          /* set position to right bottom corner of block */
          right: 0;
          bottom: 0;
          padding: 0 15px;
        }

        /* hide ... if we have text, which is less than or equal to max lines */
        &:after {
          /* points in the end */
          content: '';
          /* absolute position */
          position: absolute;
          /* set position to right bottom corner of text */
          right: 0;
          /* set width and height */
          width: 30px;
          height: 30px;
          margin-top: -30px;
          /* bg color = bg color under block */
          background: white;
        }
      }
    }
  }

  .genres-and-platforms {
    display: flex;

    .platforms {
      width: 40%;
      .platform-list {
        display: flex;
        flex-flow: row wrap;
      }
    }

    .genres {
      width: 60%;
      .genre-list {
        display: flex;
        flex-flow: row wrap;
      }

      .no-genres-text {
        font-weight: bold;
        color: @gray;
      }
    }
  }

  .game-card-hr {
    width: 100%;
    border-color: @gray;
    color: @gray;
    margin-top: 20px;
    margin-bottom: 5px;
  }
}

@media (max-width: @mobile-screen-max) {
  .game-card {
    margin-top: 25px;

    .image-and-description {
      .game-cover {
        width: 100%;
        display: flex;
        justify-content: center;

        .game-cover-image {
          height: auto;
          width: auto;
          max-width: 250px;
        }
      }

      .game-info {
        width: 100%;
        padding: 0;

        .game-title {
          text-align: center;

          .title-header {
            margin-right: 0;
            margin-top: 15px;
          }

          .game-title-hr {
            margin-right: 0;
            width: 100%;
          }
        }

        .star-rating {
          justify-content: center;
        }
      }
    }

    .genres-and-platforms {
      display: block;

      .platforms {
        width: 100%;
        text-align: center;
        .platform-list {
          justify-content: center;
        }
      }

      .genres {
        width: 100%;
        text-align: center;
        .genre-list {
          justify-content: center;
        }
      }
    }

    .game-card-hr {
      margin-right: 0;
      margin-left: 0;
    }
  }
}

